--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Luke-Doms/NEO_cube.git"
   },
   "author": "Luke Doms",
-  "license": "ISC",
+  "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/Luke-Doms/NEO_cube/issues"
   },
